<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="th.co.the1.the1app.th.com.onecard.fragment.register.SplashFragment">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/edtStartDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="25"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:hint="@string/start_date_hint"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/edtEndDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="25"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:hint="@string/end_date_hint"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <RelativeLayout
                android:id="@+id/layFilter"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:layout_weight="25"
                android:background="@drawable/half_rounded_light">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/filter_label"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layAll"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="25"
                android:background="@drawable/half_rounded_dark">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/all_label"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="40"
                android:gravity="left"
                android:text="@string/website_name_text"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="30"
                android:gravity="center"
                android:text="@string/visit_date_text"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="30"
                android:gravity="center"
                android:text="@string/total_visits_text"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/lightDark" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/listWebsites"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>
</layout>